worked on training

--- a/ini/15puzzleinitial.ini
+++ b/ini/15puzzleinitial.ini
@@ -2,5 +2,7 @@
 puzzleSize = 15
 
 [train]
-numberOfScrambles = 1000
-scrambleDepth = 30
+numberOfScrambles = 5
+scrambleDepth = 10
+batchSize = 64
+lr = 0.001
