Created Model Saving and ArgParser

--- a/ini/15puzzleinitial.ini
+++ b/ini/15puzzleinitial.ini
@@ -2,7 +2,9 @@
 puzzleSize = 15
 
 [train]
-numberOfScrambles = 5
+numberOfScrambles = 64
 scrambleDepth = 10
 batchSize = 64
+numEpochs = 1000
 lr = 0.001
+tau = 0.05
