--- a/ini/15puzzleinitial.ini
+++ b/ini/15puzzleinitial.ini
@@ -2,9 +2,13 @@
 puzzleSize = 15
 
 [train]
-numberOfScrambles = 128
+numberOfScrambles = 200
 scrambleDepth = 20
 batchSize = 64
-numEpochs = 1000
+numEpochs = 600
 lr = 0.001
 tau = 0.05
+
+[solve]
+depthPenalty = 0.8
+numParallel = 64
