Manhattan Distance Heuristic Added

--- a/ini/15puzzleinitial.ini
+++ b/ini/15puzzleinitial.ini
@@ -2,13 +2,14 @@
 puzzleSize = 15
 
 [train]
-numberOfScrambles = 200
-scrambleDepth = 20
+numberOfScrambles = 300
+scrambleDepth = 350
 batchSize = 64
-numEpochs = 600
+numEpochs = 3500
 lr = 0.001
 tau = 0.05
 
 [solve]
 depthPenalty = 0.8
 numParallel = 64
+maxSearchItr = 1500
