Implementing Solving on GUI

--- a/ini/15puzzleinitial.ini
+++ b/ini/15puzzleinitial.ini
@@ -1,15 +1,17 @@
 [general]
 puzzleSize = 15
+numWorkers = 2
+numProcs = 4
 
 [train]
-numberOfScrambles = 300
-scrambleDepth = 350
+numberOfScrambles = 1000
+scrambleDepth = 400
 batchSize = 64
 numEpochs = 3500
 lr = 0.001
 tau = 0.05
 
 [solve]
-depthPenalty = 0.8
+depthWeight = 0.8
 numParallel = 64
 maxSearchItr = 1500
