--- a/config/puzzle15.ini
+++ b/config/puzzle15.ini
@@ -1,15 +1,17 @@
 [general]
+puzzle = puzzleN
 puzzleSize = 15
 numWorkers = 2
-numProcs = 4
+numProcs = 2
 
 [train]
-numberOfScrambles = 1000
-scrambleDepth = 450
-batchSize = 64
-numEpochs = 500
+numberOfScrambles = 5000
+scrambleDepth = 300
+batchSize = 256
+numEpochs = 10
 lr = 0.001
-tau = 0.05
+lrDecay = 0.9999
+tau = 0.02
 
 [solve]
 depthWeight = 0.8
