Cleaned Up Files

--- a/config/puzzle15.ini
+++ b/config/puzzle15.ini
@@ -2,16 +2,21 @@
 puzzle = puzzleN
 puzzleSize = 15
 numWorkers = 2
-numProcs = 2
+numProcs = 12
+networkType = conv
 
 [train]
-numberOfScrambles = 5000
+numberOfScrambles = 3000
 scrambleDepth = 300
-batchSize = 256
-numEpochs = 10
+batchSize = 250
+numEpochs = 4000
 lr = 0.001
-lrDecay = 0.9999
-tau = 0.02
+lrDecay = 0.9998
+weightDecay = 0.00001
+checkEpoch = 15
+lossThreshold = 5
+numTestScrambles = 300
+testScrambleDepth = 300
 
 [solve]
 depthWeight = 0.8
