--- a/config/cube3.ini
+++ b/config/cube3.ini
@@ -2,16 +2,22 @@
 puzzle = cubeN
 puzzleSize = 3
 numWorkers = 2
+networkType = residual
 
 [train]
-numberOfScrambles = 1000
+numberOfScrambles = 10000
 scrambleDepth = 30
-batchSize = 64
-numEpochs = 500
-lr = 0.001
-tau = 0.05
+batchSize = 1000
+numEpochs = 10
+lr = 0.0001
+lrDecay = 0.9995
+weightDecay = 0.00001
+checkEpoch = 50
+lossThreshold = 0.1
+numTestScrambles = 200
+testScrambleDepth = 30
 
 [solve]
-depthWeight = 0.6
+depthWeight = 0.5
 numParallel = 64
-maxSearchItr = 800
+maxSearchItr = 2000
