--- a/config/cube3.ini
+++ b/config/cube3.ini
@@ -1,23 +1,23 @@
 [general]
 puzzle = cubeN
 puzzleSize = 3
-numWorkers = 2
-networkType = residual
+numWorkers = 0
+networkType = paper
 
 [train]
-numberOfScrambles = 10000
+numberOfScrambles = 100
 scrambleDepth = 30
-batchSize = 1000
-numEpochs = 10
-lr = 0.0001
+batchSize = 50
+numEpochs = 200
+lr = 0.001
 lrDecay = 0.9995
 weightDecay = 0.00001
-checkEpoch = 50
+checkEpoch = 10
 lossThreshold = 0.1
-numTestScrambles = 200
+numTestScrambles = 5
 testScrambleDepth = 30
 
 [solve]
-depthWeight = 0.5
-numParallel = 64
-maxSearchItr = 2000
+depthWeight = 0.05
+numParallel = 32
+maxSearchItr = 2500
