--- a/config/puzzle24.ini
+++ b/config/puzzle24.ini
@@ -2,7 +2,7 @@
 puzzle = puzzleN
 puzzleSize = 24
 numWorkers = 2
-networkType = residual
+networkType = residualSELU
 
 [train]
 numberOfScrambles = 3000
@@ -18,6 +18,6 @@ numTestScrambles = 400
 testScrambleDepth = 400
 
 [solve]
-depthWeight = 0.4
+depthWeight = 0.7
 numParallel = 64
-maxSearchItr = 1500
+maxSearchItr = 4000
